Bug 571675 - [16] [tests] Java 16 based LeakTestCase failing on Y-builds
Change-Id: Ib19d9542ac38e8e7687aef8add7e4a59eaedec38
Signed-off-by: Kalyan Prasad Tatavarthi <kalyan_prasad@in.ibm.com>